--- a/Nettoyage.ipynb
+++ b/Nettoyage.ipynb
@@ -3883,7 +3883,8 @@
    "source": [
     "# Liste des colonnes numériques\n",
     "listeColumns = listeColonesAlgo.copy()\n",
-    "listeColumns = list(listeTmp.dtypes.loc[lambda x : x != 'object'].index)"
+    "listeColumns = list(listeTmp.dtypes.loc[lambda x : x != 'object'].index)\n",
+    "if 'sodium_100g' in listeColumns : listeColumns.remove('sodium_100g')"
    ]
   },
   {
@@ -4371,7 +4372,7 @@
    ],
    "source": [
     "# Liste des colonnes avec un bon R² score\n",
-    "listeColumnsInteressantes = [c for c, s in listeScore if s>0.6]\n",
+    "listeColumnsInteressantes = [c for c, s in listeScore if s>0.7]\n",
     "print(listeColumnsInteressantes)"
    ]
   },
